# eagenda-data-proxy

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  booking_limits.json  data_proxy_config.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  dependencies.py  main.py
app/admin/: setup.py
app/auth/: bearer.py  create_token.py
app/db/: engine.py
app/models/: __init__.py  audit_log.py  custom_data.py  local_appointment.py  notification_log.py  pii_person.py  pii_questionnaire.py  proxy_token.py
app/proxy/: client.py  enricher.py  forwarder.py  interceptor.py  pii_fields.py
app/routers/: appointments.py  availability.py  calendars.py  health.py  local_data.py  people.py  services.py  tags.py  webhook_receiver.py  webhooks_config.py
app/schemas/: appointment.py  common.py  person.py  webhook.py
app/services/: audit.py  booking_limiter.py  custom_data_store.py  data_privacy.py  notification.py  pii_store.py  questionnaire.py  sms.py  whatsapp.py
app/tasks/: audit_cleanup.py  celery_app.py  notifications.py  webhook_relay.py
app/templates/: appointment_notification.html
docs/: booking-limits.md  custom-data.md  data-privacy.md
tests/: conftest.py  factories.py  test_audit.py  test_auth.py  test_enricher.py  test_interceptor.py  test_questionnaire.py  test_routers_integration.py
